# qt-example

./: .gitignore  CMakeLists.txt  example.cpp
cmake/Modules/: CopyMSVCBins.cmake
cmake/windows/: buildspec.cmake
